<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="6"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:padding="10dp"
        android:text="@string/gasText"
        android:textAlignment="center"
        android:textSize="@dimen/textSize" />
    <SeekBar
        android:id="@+id/gasSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_gravity="fill_horizontal"
        android:max="10"
        android:layout_row="1"
        android:progress="5"
        android:layout_column="0" />
    <TextView
        android:id="@+id/etTextView"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:text="@string/etText"
        android:textAlignment="center"
        android:textSize="@dimen/textSize" />
    <SeekBar
        android:id="@+id/etSeekBar"
        android:layout_row="3"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:padding="6dp"
        android:max="10"
        android:progress="3"
        android:layout_column="0" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleTextInput"
        android:layout_row="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:paddingTop="30dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/titleText"
        android:background="@color/result_background"
        android:textColorHint="@color/letterColor"
        >

        <EditText
            android:id="@+id/resultEditText"
            android:layout_width="match_parent"
            android:textColor="@color/letterColor"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:enabled="false"
            android:inputType="none"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/gas"
            android:textAlignment="center"
            android:textSize="@dimen/textSize" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/image"
        android:contentDescription="@string/gasDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        app:srcCompat="@drawable/gas" />
</GridLayout>